# neural_best_buddies

./: LICENSE  README.md  main.py  pyproject.toml  replicability_instructions.htm  script.sh
algorithms/: neural_best_buddies.py
deep_helpers/: draw_correspondence.py  sparse_semantic_correspondence.py
docs/: index.html
docs/css/: style.css
models/: vgg19_model.py
neural_best_buddies/algorithms/: neural_best_buddies.py
neural_best_buddies/util/: MLS.py
options/: options.py
tools/: warp_check.py
util/: MLS.py  util.py
